--- a/style.css
+++ b/style.css
@@ -116,6 +116,15 @@ section h2 {
     object-fit: cover;
 }
 
+/* Beholder stilen for prosjekt-kortene */
+#projects .project {
+    background: #f9fbff;
+    padding: 1.5rem;
+    margin-bottom: 1rem;
+    border-left: 5px solid var(--secondary-color);
+    border-radius: 5px;
+}
+
 #projects .project, #utdanning ul li {
     background: #f9fbff;
     padding: 1.5rem;
@@ -124,6 +133,7 @@ section h2 {
     border-radius: 5px;
     list-style-type: none;
 }
+
 #utdanning p {
     margin: 0.5rem 0 0 0;
     font-size: 0.95rem;
