--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ section h2 {
 
 #scrollToTopBtn {
     display: none;
-    position: fixed;
+    position:fixed;
     bottom: 20px;
     right: 30px;
     z-index: 1000;
@@ -140,7 +140,7 @@ section h2 {
     width: 50px;
     height: 50px;
     cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    box-shadow: 0 6px 10px rgb(0, 0, 0);
     align-items: center;
     justify-content: center;
     opacity: 0;
